// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flipper snapshots Flipper: 0 1`] = `
<button
  aria-hidden={true}
  className="flipper-0-1-1 flipper__next-0-1-3"
  data-sketch-symbol="Flipper - default"
  href={null}
  tabIndex={-1}
>
  <span
    className="flipper_glyph-0-1-2"
  />
</button>
`;

exports[`flipper snapshots Flipper: 1 1`] = `
<button
  aria-hidden={true}
  className="flipper-0-1-1 flipper__previous-0-1-4"
  direction="previous"
  href={null}
  tabIndex={-1}
>
  <span
    className="flipper_glyph-0-1-2"
  />
</button>
`;

exports[`flipper snapshots Flipper: 2 1`] = `
<button
  aria-label="See next"
  className="flipper-0-1-1 flipper__next-0-1-3"
  direction="next"
  href={null}
>
  <span
    className="flipper_glyph-0-1-2"
  />
</button>
`;

exports[`flipper snapshots Flipper: 3 1`] = `
<button
  aria-label="See previous"
  className="flipper-0-1-1 flipper__previous-0-1-4"
  direction="previous"
  href={null}
>
  <span
    className="flipper_glyph-0-1-2"
  />
</button>
`;
